Dec 19, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.11.1

Dec 19, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version back to to 0.9.11 for release with fixes below

Dec 19, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- properly quoted macros for zlib checks
- changed configure argument because help text said --enable-externalrcon while
  it actually was --enable-readline.
- disabled external rcon by default

Dec 18, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.11.1

Dec 18, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.11

Dec 18, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- update NEWS
- update german translation

Dec 18, 2002: Jordi Mallach <jordi@sindominio.net>
- Updated Catalan and Spanish translations.

Dec 08, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- update configure.in and autogen.sh to match newer automake/autoconf

Dec 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- Scan for installed q3, wolfenstein, ut, ut2 and rune maps. Mark not installed
  ones in serverlist

Dec 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- Added support for Serious Sam, appropriate qstat config with "SMS" game type
  required

Dec 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- display RTCW voteflags like dmflags

Nov 28, 2002: Jordi Mallach <jordi@sindominio.net>
- Updated Catalan and Spanish translations.

Nov 22, 2002: Jordi Mallach <jordi@sindominio.net>
- port Ludwig's setlocale fix to rcon.c.

Nov 21, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- store when a server was last up, display this date in red if it's more than
  three days older than the last refresh. Necessary change to ~/.qf/srvinfo.gz
  is backward and forward compatible.
- util function timet2string, it has yet to be verified this one works on
  none-linux system too.
- use setlocale(LC_ALL, "");
- fix __FUNCTION__ warnings
