@@ -103,7 +103,7 @@ AC_ARG_ENABLE(bzip2,[  --enable-bzip2          use bzip2 for data compression],C
 AC_SUBST(COMPRESSION)
 
 dnl check if user wants debug
-AC_ARG_ENABLE(debug,[  --enable-debug          turn on debugging ],DEBUG="-g -DDEBUG", DEBUG="")
+AC_ARG_ENABLE(debug,[  --enable-debug          turn on debugging ],DEBUG="-DDEBUG" CFLAGS="-g -O0", DEBUG="")
 AC_SUBST(DEBUG)
 
 AC_SUBST(VERSION)
